Advanced Diagnosis perfected

--- a/src/app/components/dashboard/content/patient-visit/visit-diagnosis/visit-diagnosis.component.css
+++ b/src/app/components/dashboard/content/patient-visit/visit-diagnosis/visit-diagnosis.component.css
@@ -1,6 +1,9 @@
 .main-container {
     padding: 16px;
     background: white;
+    height: 560px;
+    max-height: 560px;
+    overflow: auto;
 }
 
 .visit-response-header {
