--- a/src/app/components/diagnosis/patient-info/patient-info.component.html
+++ b/src/app/components/diagnosis/patient-info/patient-info.component.html
@@ -1,7 +1,7 @@
 <div class="patient-info-container stretch-container">
     <div class="name-icon-container">
         <div class="icon-container">
-            <span>{{visit.medicalFile.lastname[0]}}</span>
+            <span>{{visit.medicalFile.name[0]}}</span>
         </div>
     </div>
     <div class="info-container">
