--- a/src/app/components/dashboard/content/patient-visit/visit-diagnosis/neuron-response/neuron-response.component.css
+++ b/src/app/components/dashboard/content/patient-visit/visit-diagnosis/neuron-response/neuron-response.component.css
@@ -12,6 +12,8 @@
 
 .input-container {
     height: 230px;
+    max-height: 230px;
+    overflow: hidden;
 }
 
 .image-container {
@@ -53,12 +55,17 @@
 
 .symptom {
     background: #eeeeee;
-    padding: 8px 16px;
+    text-align: center;
+    padding: 0px 8px;
     display: inline-block;
     border-radius: 20px;
     color: #555555;
     margin-right: 8px;
     margin-top: 8px;
+    height: 28px;
+    overflow: hidden;
+    font-size: 12px;
+    line-height: 28px;
 }
 
 .symptoms {
