--- a/src/app/components/diagnosis/speciality-diagnosis/speciality-diagnosis.component.css
+++ b/src/app/components/diagnosis/speciality-diagnosis/speciality-diagnosis.component.css
@@ -8,6 +8,8 @@
     min-width: 300px;
     position: relative;
     margin-right: 16px;
+    background: white;
+    padding: 16px;
 }
 
 .right-side {
@@ -34,18 +36,6 @@
     width: 100%;
     background: white;
     margin-top: 16px;
-    padding: 8px 0px;
-}
-
-.controller button {
-    float: right;
-    margin-right: 16px;
-    background: rgb(38, 94, 215);
-    color: white;
-    border: none;
-    padding: 8px 16px;
-    width: 140px;
-    border-radius: 20px;
 }
 
 .speciality-container {
@@ -65,34 +55,10 @@
     background: rgba(38, 94, 215, 0.8);
 }
 
-.speciality-container ul {
-    list-style-type: none;
-    padding: 0px;
-    margin: 0px;
-    background: white;
-    border-radius: 8px;
-    box-shadow: 2px 2px 8px rgba(0, 0, 0, 0.1);
-    margin-top: 8px;
-    position: absolute;
-    width: 100%;
-}
-
-.speciality-container ul li {
-    padding: 6px 16px;
-    font-size: 14px;
-    color: #212121;
-    transition-duration: 0.3s;
-    cursor: pointer;
-}
-
-.speciality-container ul li:hover {
-    background: #eeeeee;
-}
-
 .collections {
     list-style-type: none;
     margin: 0px;
-    padding: 8px;
+    padding: 0px;
     margin-top: 16px;
     background: white;
     height: 380px;
@@ -100,12 +66,14 @@
 
 .collections li {
     padding: 8px 16px;
-    font-size: 14px;
+    font-size: 12px;
     color: #555555;
     cursor: pointer;
     border-radius: 6px;
     transition-duration: 0.3s;
     margin: 4px;
+    text-transform: capitalize;
+    border-radius: 20px;
 }
 
 .collections li:hover {
@@ -115,4 +83,9 @@
 .collections li.selected {
     background: rgba(38, 94, 215, 0.1);
     color: rgba(38, 94, 215, 0.8);
+}
+
+.controller button {
+    float: right;
+    width: 50%;
 }
