MedicalFile from visit is done

--- a/src/app/components/dashboard/content/medical-files-manager/medical-file-details/medical-file-details.component.html
+++ b/src/app/components/dashboard/content/medical-files-manager/medical-file-details/medical-file-details.component.html
@@ -90,7 +90,7 @@
                 <button class="primary-button" (click)="edit()">Modifer <i class="fa fa-edit"></i></button>
             </div>
             <div class="col col-md-6">
-                <button class="primary-button delete" (click)="delete()">Suprimer <i class="fa fa-trash"></i></button>
+                <button *ngIf="!inVisit" class="primary-button delete" (click)="delete()">Suprimer <i class="fa fa-trash"></i></button>
             </div>
         </div>
     </div>
