--- a/src/app/components/dashboard/content/patient-visit/visit-diagnosis/visit-diagnosis.component.css
+++ b/src/app/components/dashboard/content/patient-visit/visit-diagnosis/visit-diagnosis.component.css
@@ -57,4 +57,10 @@
 
 .responses {
     padding: 16px;
+    height: 480px;
+    max-height: 480px;
+}
+
+.response-container {
+    margin-bottom: 16px;
 }
