--- a/src/app/components/dashboard/side-bar/side-bar.component.html
+++ b/src/app/components/dashboard/side-bar/side-bar.component.html
@@ -70,7 +70,7 @@
             </li>
 
             <li [class.active]="activatedRouter == 6">
-                <a routerLink="/dashboard/profil">
+                <a routerLink="/dashboard/profil-manager/profil">
                     <i class="fa fa-user-md"></i>
                     <span>Profil</span>
                 </a>
