--- a/src/app/components/dashboard/content/profil-manager/profil/medical-act-manager/medical-act-manager.component.html
+++ b/src/app/components/dashboard/content/profil-manager/profil/medical-act-manager/medical-act-manager.component.html
@@ -1,7 +1,7 @@
 <div class="main-container primary-radius">
     <div class="card-title">
         <span>Gestion des Actes médicaux</span>
-        <a class="primary-button" [routerLink]="" [queryParams]="{'pop-up-window' : true , 'window-page' : 'medical-act-submitter'}">
+        <a class="primary-button" [routerLink]="" [queryParams]="{'pop-up-window' : true , 'window-page' : 'medical-act-submitter' , 'title' : 'Ajouter un act médical'}">
             Ajouter <i class="fa fa-plus"></i>
         </a>
         <div style="clear: both;"></div>
