--- a/src/app/components/dashboard/content/profil-manager/profil/medical-act-manager/medical-act-submitter/medical-act-submitter.component.css
+++ b/src/app/components/dashboard/content/profil-manager/profil/medical-act-manager/medical-act-submitter/medical-act-submitter.component.css
@@ -1,7 +1,11 @@
 .main-container {
-    padding: 16px;
-    background: white;
     width: 560px;
+    padding: 16px;
+}
+
+.content {
+    background: white;
+    padding: 16px;
 }
 
 button {
