--- a/src/app/components/dashboard/content/waiting-room/new-medical-file/new-medical-file.component.css
+++ b/src/app/components/dashboard/content/waiting-room/new-medical-file/new-medical-file.component.css
@@ -53,13 +53,15 @@ select.is-invalid {
 }
 
 .clear {
-    background: #eeeeee;
     border-radius: 8px;
     padding: 8px 16px;
     width: 120px;
     text-align: center;
-    border: none;
-    outline: none;
+}
+
+.clear:hover {
+    background: rgb(254, 101, 85);
+    color: white;
 }
 
 .controller .primary-button {
@@ -81,20 +83,36 @@ select.is-invalid {
     max-height: 180px;
     height: 180px;
     overflow: auto;
+    border: 1px solid #eeeeee;
+    border-radius: 8px;
+    margin: 8px 0px;
+    padding: 4px 12px;
 }
 
 .antecedents-list span {
     background: #eeeeee;
     padding: 8px 16px;
     border-radius: 20px;
-    margin-top: 4px;
+    margin-top: 6px;
     margin-right: 8px;
     display: inline-block;
+    font-size: 12px;
 }
 
 .edit {
-    color: rgb(38, 94, 215);
+    color: white;
     float: right;
-    text-decoration: underline;
     cursor: pointer;
+    background: rgb(38, 94, 215);
+    padding: 2px 8px;
+    border-radius: 20px;
+    font-size: 13px;
+}
+
+.center-v {
+    height: 42px;
+}
+
+.center-v label {
+    margin: 0px;
 }
