Clinical Exam Edit done

--- a/src/app/components/dashboard/content/patient-visit/clincal-exam-manager/add-clincal-exam/add-clincal-exam.component.css
+++ b/src/app/components/dashboard/content/patient-visit/clincal-exam-manager/add-clincal-exam/add-clincal-exam.component.css
@@ -16,5 +16,16 @@ textarea {
 }
 
 button {
+    padding: 8px 16px;
+    width: 160px;
+    border-radius: 8px;
+}
+
+button.secondary-button:hover {
+    background: rgb(254, 101, 85);
+    color: white;
+}
+
+button.primary-button {
     float: right;
 }
