--- a/src/app/components/dashboard/content/patient-visit/clincal-exam-manager/clincal-exam-manager.component.css
+++ b/src/app/components/dashboard/content/patient-visit/clincal-exam-manager/clincal-exam-manager.component.css
@@ -7,4 +7,15 @@
     background: white;
     width: 420px;
     margin: 0px 8px;
+    position: relative;
+}
+
+.white-background {
+    background: rgba(255, 255, 255, 0.5);
+    position: absolute;
+    top: 0px;
+    left: 0px;
+    width: 100%;
+    height: 100%;
+    z-index: 1;
 }
