--- a/src/app/components/dashboard/content/patient-visit/clincal-exam-manager/clincal-exam-manager.component.html
+++ b/src/app/components/dashboard/content/patient-visit/clincal-exam-manager/clincal-exam-manager.component.html
@@ -1,8 +1,11 @@
 <div class="main-container stretch-container">
     <div class="exam-col exams-list primary-radius">
-        <app-clincal-exam-list (closeEvent)="closeEvent.emit()" (addExamEvent)="addClincalExam = true" [clinicalExams]="clinicalExams"></app-clincal-exam-list>
+        <div class="white-background primary-radius" *ngIf="addClincalExam">
+
+        </div>
+        <app-clincal-exam-list (editExam)="editExam($event)" (closeEvent)="closeEvent.emit()" (addExamEvent)="addClincalExam = true" [clinicalExams]="clinicalExams"></app-clincal-exam-list>
     </div>
     <div class="exam-col exams-add primary-radius" *ngIf="addClincalExam">
-        <app-add-clincal-exam (closeEvent)="addClincalExam= false" (addClincalExamEvent)="onAddClinicalExam($event)"></app-add-clincal-exam>
+        <app-add-clincal-exam (editClinicalExam)="editClinicalExam($event)" [clinicalExam]="editedExam" (closeEvent)="addClincalExam= false; editedExam = null" (addClincalExamEvent)="onAddClinicalExam($event)"></app-add-clincal-exam>
     </div>
 </div>
